[package]
name = "aoc19"
version = "0.1.0"
authors = ["Max Weber <mii7303@gmail.com>"]
edition = "2021"


[profile.release]
opt-level = 3
lto = "fat"
debug = true


[dependencies]
aoc-helper = { path = "../aoc-helper/aoc-helper" }

strum = "0.16.0"
strum_macros = "0.16.0"

lazy_static = "1.4.0"

regex = "1"

num = "0.4"
memchr = "2.2.1"