[package]
name = "aoc23"
version = "0.1.0"
authors = ["Max Weber <mii7303@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
debug = true

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
num = "0.4.1"